Add bone animations and independent parallel runtime tasks for 1.0.2